# bp-code

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  app.cpp  log.cpp  main.cpp  renderer.cpp  window.cpp
src/include/: app.hpp  log.hpp  renderer.hpp  window.hpp
